# 2048

./: LICENSE  README.md  game2048.cabal
app/: Main.hs
src/: Logic.hs
